...
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:text="@string/category"
        android:textAppearance="?android:attr/textAppearanceListItemSmall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/selector"
        app:layout_constraintStart_toEndOf="@+id/foldericon"
        app:layout_constraintTop_toTopOf="parent" />


    <com.shamanland.fonticon.FontIconView
        android:id="@id/selector"
...
