...
  -->

<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <!-- default category -->
    <string name="category_1">Bills</string>
    <string name="category_2">Food</string>
    <string name="category_3">Leisure</string>
    <string name="category_4">Automobile</string>
    <string name="category_5">Education</string>
    <string name="category_6">Homeneeds</string>
    <string name="category_7">Healthcare</string>
    <string name="category_8">Insurance</string>
...
