<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2012-2018 The Android Money Manager Ex Project Team
  ~
  ~ This program is free software; you can redistribute it and/or
  ~ modify it under the terms of the GNU General Public License
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/mmx_activity_vertical_margin"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="@dimen/mmx_padding"
        android:paddingBottom="@dimen/mmx_padding"
        android:orientation="vertical"
        android:gravity="bottom">

        <com.money.manager.ex.view.RobotoTextView
            android:id="@+id/textViewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:textSize="14sp"
            app:typeface="roboto_light"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <com.money.manager.ex.view.RobotoTextView
            android:id="@+id/textViewMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:text="€ 0.00"
            android:textSize="@dimen/input_dialog_text_size"
            app:typeface="roboto_light"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <!-- separator -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="4"
            app:rowCount="5"
            app:alignmentMode="alignBounds">

            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyClear"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="C" />
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyLeftParenthesis"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="(" />
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyRightParenthesis"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text=")" />
            <ImageButton
                android:id="@+id/deleteButton"
                style="@style/Money.Button.Input.Dialog.Full.Operator" />

            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum7"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="7"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum8"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="8"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum9"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="9"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyDiv"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="/"/>

            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum4"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="4"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum5"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="5"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum6"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="6"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyMultiplication"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="*"/>

            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum1"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="1"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum2"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="2"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum3"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="3"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyLess"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="-"/>

            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNumDecimal"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="."/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyNum0"
                style="@style/Money.Button.Input.Dialog.Full"
                android:text="0"/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyEqual"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="="/>
            <com.money.manager.ex.view.RobotoButton
                android:id="@+id/buttonKeyAdd"
                style="@style/Money.Button.Input.Dialog.Full.Operator"
                android:text="+"/>

        </androidx.gridlayout.widget.GridLayout>
    </ScrollView>
</LinearLayout>
