...
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textStyle="bold"/>
            <com.money.manager.ex.view.RobotoTextViewFontIcon
                android:id="@+id/textViewDate"
                style="@style/Money.TextView.Widget.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:iconLeft="@xml/ic_calendar_small"
                app:iconStart="@xml/ic_calendar_small"
                android:drawablePadding="@dimen/money_padding"
...
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/amount"
                        android:textStyle="bold" />

                    <com.money.manager.ex.view.RobotoTextView
                        android:id="@+id/textViewAmount"
                        style="@style/Money.TextView.Widget.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="?attr/ic_calculator"
                        android:drawableStart="?attr/ic_calculator"
                        android:textStyle="bold"
...
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.money.manager.ex.view.RobotoTextView
                        android:id="@+id/textViewPayee"
                        style="@style/Money.TextView.Widget.EditText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:drawableLeft="?attr/ic_users"
                        android:drawableStart="?attr/ic_users"
                        android:hint="@string/payee"/>

                    <com.shamanland.fonticon.FontIconView
                        android:id="@+id/removePayeeButton"
                        android:layout_width="@dimen/money_button_height"
                        android:layout_height="@dimen/money_button_height"
                        android:text="@string/ic_erase"
                        android:textSize="@dimen/fonticon_drawer"
                        style="@style/Money.Button" />
                </LinearLayout>
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.money.manager.ex.view.RobotoTextView
                    android:id="@+id/textViewCategory"
                    style="@style/Money.TextView.Widget.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="?attr/ic_label_outline"
                    android:drawableStart="?attr/ic_label_outline"
...
