...

            <Button
                android:id="@+id/buttonQuit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="20"
                android:text="Cancel" />
        </LinearLayout>

        <!-- include layout="@layout/content_auth" /  -->
        <TextView
            android:id="@+id/textViewClass"
            android:layout_width="match_parent"
...
